# CppImageCompression

./: .gitignore  Arguments.hpp  CMakeLists.txt  Readme.md  main.cpp
.github/workflows/: msvc.yml
ImageBlurringAlgos/: FastGaussianBlur.cpp  FastGaussianBlur.hpp  NaiveBlur.cpp  NaiveBlur.hpp  NaiveBlurPrefixSumMat.cpp  NaiveBlurPrefixSumMat.hpp  NaiveBlurThreaded.cpp  NaiveBlurThreaded.hpp
ImageBlurringAlgos/Base/: ESupportedImageBlurringAlgos.hpp  ImageBlurrer.cpp  ImageBlurrer.hpp
ImageData/: ImageData.cpp  ImageData.hpp  TgaModule.cpp  TgaModule.hpp
ImageData/Base/: AImageData.hpp  IImageData.hpp  Pixel.hpp
ImageModules/: IImageLoader.hpp  Pixel.hpp  TgaModule.cpp  TgaModule.hpp
Utils/: MathUtils.hpp
